# digipin-ui

./: PR_DESCRIPTION.md  README.md  README.old.md  package-lock.json  package.json  render.yaml
.github/workflows/: backend-deploy.yml  frontend-deploy.yml
digipin_agent/: README.md  pyproject.toml
digipin_agent/src/digipin_agent/: __init__.py  agent.py  geo.py
digipin_agent/tests/: test_agent.py
digipin_server/: README.md  main.py  requirements.txt
public/: index.html  india.geojson  manifest.json  olamaps-test.html  robots.txt  sitemap.xml
src/: App.css  App.test.tsx  App.tsx  index.css  index.tsx  setupTests.ts  utils.test.ts
src/components/: AppLogo.tsx  BaseLayers.tsx  DigipinAssistant.tsx  FloatingPanel.tsx  InfoDialog.tsx  MapRouter.tsx  MapView.tsx  MapplsMapView.tsx  MobileBottomSheet.tsx  MobileNav.tsx  OlaMap.tsx  OlaMapPanel.tsx  SearchOverlay.tsx
src/features/batch/: BatchPanel.tsx
src/features/decode/: DecodePanel.tsx
src/features/encode/: EncodePanel.tsx
src/features/geo/: GeoPanel.tsx
src/layout/: MainLayout.tsx
src/services/: digipinAgent.ts
src/types/: index.ts  mappls.d.ts
